# fastAPI_project

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  dockerignore  main.py  mypy.ini  pyproject.toml  seed_data.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 055fbafe4d8b_create_movie_favorites_table.py  0d7dfd403a89_create_movie_favorites_table.py  0f427f0007f6_add_payments.py  11a79ae9465f_create_movie_comments_table.py  1d7611cb8619_create_movie_comments_table.py  248998c2c3ab_improve_order_constraints.py  2b2fe76158df_add_uuid_default_to_movies.py  2f9c15d023c3_create_movie_favorites_table.py  313338aec8f8_create_orders_tables.py  35e1628f2881_improve_order_constraints.py  365318bade39_add_movies_schema.py  367d8605c8ff_create_movie_comments_table.py  469e94d07f89_create_orders_tables.py  8df824420a5d_create_movie_comments_table.py  8ef72f7a690d_add_carts_and_cart_items.py  8f413e436361_initial_migration.py  9139615757b0_create_movie_favorites_table.py  d04bbbece378_create_movie_comments_table.py  d67f9ea8c776_create_movie_favorites_table.py  ded7b8faee72_add_movie_likes_table.py  fe9fed5187d5_add_payments.py
app/config/: dependencies.py  email_dependencies.py  settings.py  settings_dependency.py
app/database/: session.py
app/exceptions/: exceptions.py
app/modules/cart/models/: cart_models.py
app/modules/cart/routers/: cart_routers.py
app/modules/cart/schemas/: cart_schema.py
app/modules/cart/services/: cart_service.py
app/modules/movies/crud/: genre_crud.py  movies_crud.py  star_crud.py
app/modules/movies/models/: associations.py  movie_models.py
app/modules/movies/routers/: moderator_routers.py  movies_routers.py
app/modules/movies/schemas/: movie_schema.py
app/modules/movies/schemas/examples/: movies_schema_examples.py
app/modules/movies/services/: comment_notification_service.py  movie_service.py
app/modules/order/models/: enum.py  order_models.py
app/modules/order/routers/: order_router.py
app/modules/order/schemas/: order_schemas.py
app/modules/order/services/: order_service.py
app/modules/payment/models/: payment_enum.py  payment_models.py
app/modules/payment/routers/: payment_admin_router.py  payment_router.py
app/modules/payment/services/: payment_service.py
app/modules/users/crud/: token.py  user.py
app/modules/users/models/: enums.py  token.py  user.py
app/modules/users/routers/: auth.py  auth_router.py  password_router.py  registration_router.py
app/modules/users/schemas/: password.py  password_schema.py  token.py  token_schema.py  user.py  user_schema.py
app/modules/users/services/: auth_service.py  password_service.py  registration_service.py  user_service.py
app/notifications/: email_sender.py  interfaces.py
app/tasks/: __init__.py  celery_app.py  cleanup_tokens.py
app/templates/emails/: activation_complete.html  activation_request.html  password_reset_complete.html  password_reset_request.html
app/tests/: test_placeholder.py
app/utils/: security.py  token_manager.py
