[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksii Drenov",email = "leshadrenev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "aiosmtplib (>=5.0.0,<6.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.1,<2.0.0)",
    "bcrypt (==4.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]
