[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksii Drenov", email = "leshadrenev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0,<0.129.0",
    "sqlalchemy[asyncio]>=2.0.45,<3.0.0",
    "uvicorn>=0.40.0,<0.41.0",
    "aiosqlite>=0.22.1,<0.23.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "aiosmtplib>=5.0.0,<6.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "email-validator>=2.3.0,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "alembic>=1.18.1,<2.0.0",
    "bcrypt==4.3.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "celery>=5.6.2,<6.0.0",
    "redis>=7.1.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0,<26.0.0",
    "isort>=7.0.0,<8.0.0",
    "pytest>=9.0.2,<10.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Oleksii Drenov <leshadrenev@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.45"}
uvicorn = "^0.40.0"
aiosqlite = "^0.22.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
aiosmtplib = "^5.0.0"
jinja2 = "^3.1.6"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
email-validator = "^2.3.0"
asyncpg = "^0.31.0"
alembic = "^1.18.1"
bcrypt = "4.3.0"
pydantic-settings = "^2.0.0"
celery = "^5.6.2"
redis = "^7.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.12.0"
isort = "^7.0.0"
pytest = "^9.0.2"
psycopg2-binary = "^2.9.11"
flake8 = "^7.1.0"
mypy = "^1.11.0"
pytest-cov = "^4.1.0"
types-passlib = "^1.7.7.20250602"
types-python-jose = "^3.5.0.20250531"

[tool.black]
line-length = 88
exclude = '''
/(
    alembic
  | migrations
)/
'''